--- a/docs/package.json
+++ b/docs/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://nehareddy18.github.io/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
